# quickfuture

./: CMakeLists.txt
src/: qffuture.cpp  qffuture.h  qfvariantwrapper.h  quickfuture.h  quickfuture_include.h
